--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>WePay Checkout</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    <script src="https://use.fontawesome.com/662f2d1b1b.js"></script>
+    <script src="https://static.wepay.com/min/js/tokenization.3.latest.js"></script>
   </head>
   <body>
     <noscript>
